homepage of the odin recipes

--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8">
-		<title> MY FIRST WEBPAGE</title>
-	</head>
-	
-	<body>
-		<h1> Hello </h1>
-		<h2>
-		A note: In order to avoid branching our lesson’s instructions to accommodate for all of the differences between browsers, we are going to be using Google Chrome as our primary browser for the remainder of this course. All references to the browser will pertain specifically to Google Chrome. We strongly suggest that you use Google Chrome for all of your testing going forward.
-		</h2>
-
-	</body>
+		<meta charset="UTF-08">
+		<title> MY RECIPE </title>
+		
+		<body> 
+			<h1> ODIN RECIPES</h1>
+			<ul>
+				<li><a href="recipes/lasagna.html"> Lasagna</a></li>
+				<li><a href="recipes/hotdogs.html">Hot dogs</a></li>
+				<li><a href="recipes/potatochips.html">Potato Chips</a></li>	
+				
+		
+			</ul>
+			
+			
+		</body>
 </html>
