--- a/exercise/index.html
+++ b/exercise/index.html
@@ -3,18 +3,18 @@
 	<head>
 		<link rel="stylesheet" href="style.css"/>
 		<meta charset="UTF-08">
-		<title> styling methods</title>
+		<title> classes</title>
 	</head>
 	<body>
+		<div class= "one"> Number 1-I'm a class!</div>
 		
-		<h1> style me via the external method</h1>
-		<style>
-			div{
-				color: white;
-				background-color: green;
-			}
-		</style>
-		<div> 
-			I would like to be styled with the internal method </div>
-		<p style="color: black; background-color: orange; "> Inline method</p>
+		<p id="two"> Number 2- I'm one ID.<p>
 		
+		<div class= "one adjust-font-size"> Number 3- I'm a class, but cooler!</div>
+		
+		<p id="four"> Number 4- I'm another ID </p>
+		
+		<div class="one">Number 5- I'm a class!</div>
+		
+	</body>
+</html>
